tui/src/chatwidget/snapshots/agere_tui__chatwidget__tests__user_shell_ls_output.snap
---
source: tui/src/chatwidget/tests/exec_flow.rs
expression: blob
---
• Bash(ls)
  └ file1
    file2
